tdf#151124 Make outline folding state change set doc modified state

true

Change-Id: I70408e768d2214b2c0a5c736f9e6fd8da36d3611
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140855
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>